# serializer version: 1
# name: test_write_features[en]
  '''
  ## Features
  Abbr - Case - Compound - Definite - Degree - Gender - Mood - Number - Tense - VerbForm - Voice
  
  ### Features: **Abbr**
  `Abbr` occurs with 1 different values: `Yes`.
  
  57883 tokens (2%) have a non-empty value of `Abbr`. The feature is used with 6 part-of-speech tags: `NN` (35393; 1% instances), `AB` (22438; 1% instances), `VB` (18; 0% instances), `KN` (17; 0% instances), `JJ` (12; 0% instances), `PP` (5; 0% instances)
  
  
  
  ### Features: **Case**
  `Case` occurs with 3 different values: `Acc`, `Gen`, `Nom`.
  
  1262438 tokens (44%) have a non-empty value of `Case`. The feature is used with 7 part-of-speech tags: `NN` (695434; 24% instances), `RG` (180310; 6% instances), `JJ` (132538; 5% instances), `PM` (106006; 4% instances), `PN` (98041; 3% instances), `PC` (47212; 2% instances), `RO` (2897; 0% instances)
   56044 tokens (4%) have multiple values of `Case`.
  
  
  
  ### Features: **Compound**
  `Compound` occurs with 1 different values: `Yes`.
  
  4847 tokens (0%) have a non-empty value of `Compound`. The feature is used with 3 part-of-speech tags: `NN` (4826; 0% instances), `RG` (11; 0% instances), `PM` (10; 0% instances)
  
  
  
  ### Features: **Definite**
  `Definite` occurs with 2 different values: `Def`, `Ind`.
  
  1089520 tokens (38%) have a non-empty value of `Definite`. The feature is used with 10 part-of-speech tags: `NN` (694413; 24% instances), `JJ` (132529; 5% instances), `DT` (101631; 4% instances), `PN` (98041; 3% instances), `PC` (47212; 2% instances), `PS` (9633; 0% instances), `HP` (4463; 0% instances), `HD` (1407; 0% instances), `HS` (186; 0% instances), `RO` (5; 0% instances)
   90435 tokens (8%) have multiple values of `Definite`.
  
  
  
  ### Features: **Degree**
  `Degree` occurs with 3 different values: `Cmp`, `Pos`, `Sup`.
  
  160898 tokens (6%) have a non-empty value of `Degree`. The feature is used with 2 part-of-speech tags: `JJ` (132541; 5% instances), `AB` (28357; 1% instances)
  
  
  
  ### Features: **Gender**
  `Gender` occurs with 3 different values: `Com`, `Masc`, `Neut`.
  
  1093722 tokens (38%) have a non-empty value of `Gender`. The feature is used with 9 part-of-speech tags: `NN` (698790; 24% instances), `JJ` (132540; 5% instances), `DT` (101631; 4% instances), `PN` (98041; 3% instances), `PC` (47212; 2% instances), `PS` (9633; 0% instances), `HP` (4463; 0% instances), `HD` (1407; 0% instances), `RO` (5; 0% instances)
   157296 tokens (14%) have multiple values of `Gender`.
  
  
  
  ### Features: **Mood**
  `Mood` occurs with 3 different values: `Imp`, `Ind`, `Sub`.
  
  244612 tokens (8%) have a non-empty value of `Mood`. The feature is used with 1 part-of-speech tags: `VB` (244612; 8% instances)
  
  
  
  ### Features: **Number**
  `Number` occurs with 2 different values: `Plur`, `Sing`.
  
  1089833 tokens (38%) have a non-empty value of `Number`. The feature is used with 9 part-of-speech tags: `NN` (694905; 24% instances), `JJ` (132536; 5% instances), `DT` (101631; 4% instances), `PN` (98041; 3% instances), `PC` (47212; 2% instances), `PS` (9633; 0% instances), `HP` (4463; 0% instances), `HD` (1407; 0% instances), `RO` (5; 0% instances)
   45832 tokens (4%) have multiple values of `Number`.
  
  
  
  ### Features: **Tense**
  `Tense` occurs with 2 different values: `Past`, `Pres`.
  
  290132 tokens (10%) have a non-empty value of `Tense`. The feature is used with 2 part-of-speech tags: `VB` (242920; 8% instances), `PC` (47212; 2% instances)
  
  
  
  ### Features: **VerbForm**
  `VerbForm` occurs with 4 different values: `Fin`, `Inf`, `Part`, `Sup`.
  
  427473 tokens (15%) have a non-empty value of `VerbForm`. The feature is used with 2 part-of-speech tags: `VB` (380261; 13% instances), `PC` (47212; 2% instances)
  
  
  
  ### Features: **Voice**
  `Voice` occurs with 2 different values: `Act`, `Pass`.
  
  380257 tokens (13%) have a non-empty value of `Voice`. The feature is used with 1 part-of-speech tags: `VB` (380257; 13% instances)
  
  
  
  
  '''
# ---
# name: test_write_features[sv]
  '''
  ## Särdrag
  Abbr - Case - Compound - Definite - Degree - Gender - Mood - Number - Tense - VerbForm - Voice
  
  ### Särdrag: **Abbr**
  `Abbr` förekommer med 1 olika värden: `Yes`.
  
  57883 tokens (2%) har ett icke-tomt värde av `Abbr`. Detta särdrag är använt tillsammans med 6 ordklasser: `NN` (35393; 1% instanser), `AB` (22438; 1% instanser), `VB` (18; 0% instanser), `KN` (17; 0% instanser), `JJ` (12; 0% instanser), `PP` (5; 0% instanser)
  
  
  
  ### Särdrag: **Case**
  `Case` förekommer med 3 olika värden: `Acc`, `Gen`, `Nom`.
  
  1262438 tokens (44%) har ett icke-tomt värde av `Case`. Detta särdrag är använt tillsammans med 7 ordklasser: `NN` (695434; 24% instanser), `RG` (180310; 6% instanser), `JJ` (132538; 5% instanser), `PM` (106006; 4% instanser), `PN` (98041; 3% instanser), `PC` (47212; 2% instanser), `RO` (2897; 0% instanser)
   56044 tokens (4%) har multipla värden av `Case`.
  
  
  
  ### Särdrag: **Compound**
  `Compound` förekommer med 1 olika värden: `Yes`.
  
  4847 tokens (0%) har ett icke-tomt värde av `Compound`. Detta särdrag är använt tillsammans med 3 ordklasser: `NN` (4826; 0% instanser), `RG` (11; 0% instanser), `PM` (10; 0% instanser)
  
  
  
  ### Särdrag: **Definite**
  `Definite` förekommer med 2 olika värden: `Def`, `Ind`.
  
  1089520 tokens (38%) har ett icke-tomt värde av `Definite`. Detta särdrag är använt tillsammans med 10 ordklasser: `NN` (694413; 24% instanser), `JJ` (132529; 5% instanser), `DT` (101631; 4% instanser), `PN` (98041; 3% instanser), `PC` (47212; 2% instanser), `PS` (9633; 0% instanser), `HP` (4463; 0% instanser), `HD` (1407; 0% instanser), `HS` (186; 0% instanser), `RO` (5; 0% instanser)
   90435 tokens (8%) har multipla värden av `Definite`.
  
  
  
  ### Särdrag: **Degree**
  `Degree` förekommer med 3 olika värden: `Cmp`, `Pos`, `Sup`.
  
  160898 tokens (6%) har ett icke-tomt värde av `Degree`. Detta särdrag är använt tillsammans med 2 ordklasser: `JJ` (132541; 5% instanser), `AB` (28357; 1% instanser)
  
  
  
  ### Särdrag: **Gender**
  `Gender` förekommer med 3 olika värden: `Com`, `Masc`, `Neut`.
  
  1093722 tokens (38%) har ett icke-tomt värde av `Gender`. Detta särdrag är använt tillsammans med 9 ordklasser: `NN` (698790; 24% instanser), `JJ` (132540; 5% instanser), `DT` (101631; 4% instanser), `PN` (98041; 3% instanser), `PC` (47212; 2% instanser), `PS` (9633; 0% instanser), `HP` (4463; 0% instanser), `HD` (1407; 0% instanser), `RO` (5; 0% instanser)
   157296 tokens (14%) har multipla värden av `Gender`.
  
  
  
  ### Särdrag: **Mood**
  `Mood` förekommer med 3 olika värden: `Imp`, `Ind`, `Sub`.
  
  244612 tokens (8%) har ett icke-tomt värde av `Mood`. Detta särdrag är använt tillsammans med 1 ordklasser: `VB` (244612; 8% instanser)
  
  
  
  ### Särdrag: **Number**
  `Number` förekommer med 2 olika värden: `Plur`, `Sing`.
  
  1089833 tokens (38%) har ett icke-tomt värde av `Number`. Detta särdrag är använt tillsammans med 9 ordklasser: `NN` (694905; 24% instanser), `JJ` (132536; 5% instanser), `DT` (101631; 4% instanser), `PN` (98041; 3% instanser), `PC` (47212; 2% instanser), `PS` (9633; 0% instanser), `HP` (4463; 0% instanser), `HD` (1407; 0% instanser), `RO` (5; 0% instanser)
   45832 tokens (4%) har multipla värden av `Number`.
  
  
  
  ### Särdrag: **Tense**
  `Tense` förekommer med 2 olika värden: `Past`, `Pres`.
  
  290132 tokens (10%) har ett icke-tomt värde av `Tense`. Detta särdrag är använt tillsammans med 2 ordklasser: `VB` (242920; 8% instanser), `PC` (47212; 2% instanser)
  
  
  
  ### Särdrag: **VerbForm**
  `VerbForm` förekommer med 4 olika värden: `Fin`, `Inf`, `Part`, `Sup`.
  
  427473 tokens (15%) har ett icke-tomt värde av `VerbForm`. Detta särdrag är använt tillsammans med 2 ordklasser: `VB` (380261; 13% instanser), `PC` (47212; 2% instanser)
  
  
  
  ### Särdrag: **Voice**
  `Voice` förekommer med 2 olika värden: `Act`, `Pass`.
  
  380257 tokens (13%) har ett icke-tomt värde av `Voice`. Detta särdrag är använt tillsammans med 1 ordklasser: `VB` (380257; 13% instanser)
  
  
  
  
  '''
# ---
# name: test_write_morphology[en]
  '''
  ## Morphology
  
  ### Morphosyntactic descriptors (MSD)
  
  Top-level MSD | Frequency | Percent
  --- | --- | ---
  AB | 121224 | 4.18%
  DT | 101631 | 3.51%
  HA | 13218 | 0.46%
  HD | 1407 | 0.05%
  HP | 44722 | 1.54%
  HS | 186 | 0.01%
  IE | 45393 | 1.57%
  IN | 840 | 0.03%
  JJ | 132552 | 4.58%
  KN | 117972 | 4.07%
  MAD | 131026 | 4.52%
  MID | 101646 | 3.51%
  NN | 736544 | 25.42%
  PAD | 93999 | 3.24%
  PC | 47212 | 1.63%
  PL | 15486 | 0.53%
  PM | 106015 | 3.66%
  PN | 98041 | 3.38%
  PP | 358848 | 12.39%
  PS | 9633 | 0.33%
  RG | 180321 | 6.22%
  RO | 2897 | 0.10%
  SN | 53560 | 1.85%
  UO | 2274 | 0.08%
  VB | 380285 | 13.13%
  
  
  MSD | Frequency | Percent
  --- | --- | ---
  AB | 70456 | 2.43%
  AB.AN | 22440 | 0.77%
  AB.KOM | 8987 | 0.31%
  AB.POS | 15452 | 0.53%
  AB.SUV | 3889 | 0.13%
  DT.MAS.SIN.DEF | 1 | 0.00%
  DT.NEU.SIN.DEF | 9677 | 0.33%
  DT.NEU.SIN.IND | 19816 | 0.68%
  DT.NEU.SIN.IND+DEF | 144 | 0.00%
  DT.UTR+NEU.PLU.DEF | 14188 | 0.49%
  DT.UTR+NEU.PLU.IND | 1026 | 0.04%
  DT.UTR+NEU.PLU.IND+DEF | 2269 | 0.08%
  DT.UTR+NEU.SIN+PLU.IND | 1170 | 0.04%
  DT.UTR+NEU.SIN.DEF | 6 | 0.00%
  DT.UTR+NEU.SIN.IND | 834 | 0.03%
  DT.UTR.SIN.DEF | 17851 | 0.62%
  DT.UTR.SIN.IND | 34408 | 1.19%
  DT.UTR.SIN.IND+DEF | 241 | 0.01%
  HA | 13218 | 0.46%
  HD.NEU.SIN.IND | 164 | 0.01%
  HD.UTR+NEU.PLU.IND | 823 | 0.03%
  HD.UTR.SIN.IND | 420 | 0.01%
  HP.-.-.- | 40259 | 1.39%
  HP.NEU.SIN.IND | 3996 | 0.14%
  HP.UTR+NEU.PLU.IND | 205 | 0.01%
  HP.UTR.SIN.IND | 262 | 0.01%
  HS.DEF | 186 | 0.01%
  IE | 45393 | 1.57%
  IN | 840 | 0.03%
  JJ.AN | 20 | 0.00%
  JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM | 10870 | 0.38%
  JJ.POS.MAS.SIN.DEF.GEN | 95 | 0.00%
  JJ.POS.MAS.SIN.DEF.NOM | 268 | 0.01%
  JJ.POS.NEU.SIN.IND+DEF.NOM | 375 | 0.01%
  JJ.POS.NEU.SIN.IND.NOM | 17527 | 0.61%
  JJ.POS.UTR+NEU.PLU.IND+DEF.GEN | 230 | 0.01%
  JJ.POS.UTR+NEU.PLU.IND+DEF.NOM | 43460 | 1.50%
  JJ.POS.UTR+NEU.PLU.IND.NOM | 4953 | 0.17%
  JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 3307 | 0.11%
  JJ.POS.UTR+NEU.SIN.DEF.GEN | 29 | 0.00%
  JJ.POS.UTR+NEU.SIN.DEF.NOM | 16664 | 0.58%
  JJ.POS.UTR.SIN.IND+DEF.NOM | 430 | 0.01%
  JJ.POS.UTR.SIN.IND.NOM | 31584 | 1.09%
  JJ.SUV.MAS.SIN.DEF.NOM | 1 | 0.00%
  JJ.SUV.UTR+NEU.PLU.DEF.NOM | 187 | 0.01%
  JJ.SUV.UTR+NEU.PLU.IND.NOM | 28 | 0.00%
  JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM | 2228 | 0.08%
  JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM | 296 | 0.01%
  KN | 117948 | 4.07%
  KN.AN | 24 | 0.00%
  MAD | 131026 | 4.52%
  MID | 101646 | 3.51%
  NN.-.-.-.- | 206 | 0.01%
  NN.AN | 37351 | 1.29%
  NN.NEU.PLU.DEF.GEN | 864 | 0.03%
  NN.NEU.PLU.DEF.NOM | 12372 | 0.43%
  NN.NEU.PLU.IND.GEN | 1057 | 0.04%
  NN.NEU.PLU.IND.NOM | 43022 | 1.49%
  NN.NEU.SIN.DEF.GEN | 7186 | 0.25%
  NN.NEU.SIN.DEF.NOM | 59061 | 2.04%
  NN.NEU.SIN.IND.GEN | 699 | 0.02%
  NN.NEU.SIN.IND.NOM | 110212 | 3.80%
  NN.UTR.-.-.- | 199 | 0.01%
  NN.UTR.-.-.SMS | 4845 | 0.17%
  NN.UTR.PLU.DEF.GEN | 3430 | 0.12%
  NN.UTR.PLU.DEF.NOM | 25975 | 0.90%
  NN.UTR.PLU.IND.GEN | 3134 | 0.11%
  NN.UTR.PLU.IND.NOM | 101252 | 3.50%
  NN.UTR.SIN.DEF.GEN | 14776 | 0.51%
  NN.UTR.SIN.DEF.NOM | 123357 | 4.26%
  NN.UTR.SIN.IND.GEN | 2338 | 0.08%
  NN.UTR.SIN.IND.NOM | 185208 | 6.39%
  PAD | 93999 | 3.24%
  PC.PRF.MAS.SIN.DEF.GEN | 18 | 0.00%
  PC.PRF.MAS.SIN.DEF.NOM | 41 | 0.00%
  PC.PRF.NEU.SIN.IND.NOM | 5665 | 0.20%
  PC.PRF.UTR+NEU.PLU.IND+DEF.GEN | 12 | 0.00%
  PC.PRF.UTR+NEU.PLU.IND+DEF.NOM | 13568 | 0.47%
  PC.PRF.UTR+NEU.SIN.DEF.NOM | 2723 | 0.09%
  PC.PRF.UTR.SIN.IND.NOM | 9691 | 0.33%
  PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 15494 | 0.53%
  PL | 15486 | 0.53%
  PM.GEN | 3258 | 0.11%
  PM.NOM | 102747 | 3.55%
  PM.SMS | 10 | 0.00%
  PN.MAS.SIN.DEF.SUB+OBJ | 31 | 0.00%
  PN.NEU.SIN.DEF.SUB+OBJ | 45180 | 1.56%
  PN.NEU.SIN.IND.SUB+OBJ | 2581 | 0.09%
  PN.UTR+NEU.PLU.DEF.OBJ | 1393 | 0.05%
  PN.UTR+NEU.PLU.DEF.SUB | 3700 | 0.13%
  PN.UTR+NEU.PLU.DEF.SUB+OBJ | 558 | 0.02%
  PN.UTR+NEU.PLU.IND.SUB+OBJ | 2621 | 0.09%
  PN.UTR+NEU.SIN+PLU.DEF.OBJ | 11049 | 0.38%
  PN.UTR.PLU.DEF.OBJ | 1022 | 0.04%
  PN.UTR.PLU.DEF.SUB | 11788 | 0.41%
  PN.UTR.SIN.DEF.OBJ | 840 | 0.03%
  PN.UTR.SIN.DEF.SUB | 8164 | 0.28%
  PN.UTR.SIN.DEF.SUB+OBJ | 3143 | 0.11%
  PN.UTR.SIN.IND.SUB | 4040 | 0.14%
  PN.UTR.SIN.IND.SUB+OBJ | 1931 | 0.07%
  PP | 358838 | 12.39%
  PP.AN | 10 | 0.00%
  PS.NEU.SIN.DEF | 2345 | 0.08%
  PS.UTR+NEU.PLU.DEF | 1976 | 0.07%
  PS.UTR+NEU.SIN+PLU.DEF | 1418 | 0.05%
  PS.UTR.SIN.DEF | 3894 | 0.13%
  RG.NOM | 180310 | 6.22%
  RG.SMS | 11 | 0.00%
  RO.MAS.SIN.IND+DEF.NOM | 5 | 0.00%
  RO.NOM | 2892 | 0.10%
  SN | 53560 | 1.85%
  UO | 2274 | 0.08%
  VB.AN | 28 | 0.00%
  VB.IMP.AKT | 1765 | 0.06%
  VB.INF.AKT | 95313 | 3.29%
  VB.INF.SFO | 19930 | 0.69%
  VB.KON.PRS.AKT | 44 | 0.00%
  VB.KON.PRT.AKT | 118 | 0.00%
  VB.PRS.AKT | 184442 | 6.37%
  VB.PRS.SFO | 35885 | 1.24%
  VB.PRT.AKT | 19251 | 0.66%
  VB.PRT.SFO | 3293 | 0.11%
  VB.SUP.AKT | 14926 | 0.52%
  VB.SUP.SFO | 5290 | 0.18%
  
  '''
# ---
# name: test_write_morphology[sv]
  '''
  ## Morfologi
  
  ### Morfo-syntaktisk deskriptorer (MSD)
  
  Topp-nivå MSD | Frequency | Percent
  --- | --- | ---
  AB | 121224 | 4.18%
  DT | 101631 | 3.51%
  HA | 13218 | 0.46%
  HD | 1407 | 0.05%
  HP | 44722 | 1.54%
  HS | 186 | 0.01%
  IE | 45393 | 1.57%
  IN | 840 | 0.03%
  JJ | 132552 | 4.58%
  KN | 117972 | 4.07%
  MAD | 131026 | 4.52%
  MID | 101646 | 3.51%
  NN | 736544 | 25.42%
  PAD | 93999 | 3.24%
  PC | 47212 | 1.63%
  PL | 15486 | 0.53%
  PM | 106015 | 3.66%
  PN | 98041 | 3.38%
  PP | 358848 | 12.39%
  PS | 9633 | 0.33%
  RG | 180321 | 6.22%
  RO | 2897 | 0.10%
  SN | 53560 | 1.85%
  UO | 2274 | 0.08%
  VB | 380285 | 13.13%
  
  
  MSD | Frequency | Percent
  --- | --- | ---
  AB | 70456 | 2.43%
  AB.AN | 22440 | 0.77%
  AB.KOM | 8987 | 0.31%
  AB.POS | 15452 | 0.53%
  AB.SUV | 3889 | 0.13%
  DT.MAS.SIN.DEF | 1 | 0.00%
  DT.NEU.SIN.DEF | 9677 | 0.33%
  DT.NEU.SIN.IND | 19816 | 0.68%
  DT.NEU.SIN.IND+DEF | 144 | 0.00%
  DT.UTR+NEU.PLU.DEF | 14188 | 0.49%
  DT.UTR+NEU.PLU.IND | 1026 | 0.04%
  DT.UTR+NEU.PLU.IND+DEF | 2269 | 0.08%
  DT.UTR+NEU.SIN+PLU.IND | 1170 | 0.04%
  DT.UTR+NEU.SIN.DEF | 6 | 0.00%
  DT.UTR+NEU.SIN.IND | 834 | 0.03%
  DT.UTR.SIN.DEF | 17851 | 0.62%
  DT.UTR.SIN.IND | 34408 | 1.19%
  DT.UTR.SIN.IND+DEF | 241 | 0.01%
  HA | 13218 | 0.46%
  HD.NEU.SIN.IND | 164 | 0.01%
  HD.UTR+NEU.PLU.IND | 823 | 0.03%
  HD.UTR.SIN.IND | 420 | 0.01%
  HP.-.-.- | 40259 | 1.39%
  HP.NEU.SIN.IND | 3996 | 0.14%
  HP.UTR+NEU.PLU.IND | 205 | 0.01%
  HP.UTR.SIN.IND | 262 | 0.01%
  HS.DEF | 186 | 0.01%
  IE | 45393 | 1.57%
  IN | 840 | 0.03%
  JJ.AN | 20 | 0.00%
  JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM | 10870 | 0.38%
  JJ.POS.MAS.SIN.DEF.GEN | 95 | 0.00%
  JJ.POS.MAS.SIN.DEF.NOM | 268 | 0.01%
  JJ.POS.NEU.SIN.IND+DEF.NOM | 375 | 0.01%
  JJ.POS.NEU.SIN.IND.NOM | 17527 | 0.61%
  JJ.POS.UTR+NEU.PLU.IND+DEF.GEN | 230 | 0.01%
  JJ.POS.UTR+NEU.PLU.IND+DEF.NOM | 43460 | 1.50%
  JJ.POS.UTR+NEU.PLU.IND.NOM | 4953 | 0.17%
  JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 3307 | 0.11%
  JJ.POS.UTR+NEU.SIN.DEF.GEN | 29 | 0.00%
  JJ.POS.UTR+NEU.SIN.DEF.NOM | 16664 | 0.58%
  JJ.POS.UTR.SIN.IND+DEF.NOM | 430 | 0.01%
  JJ.POS.UTR.SIN.IND.NOM | 31584 | 1.09%
  JJ.SUV.MAS.SIN.DEF.NOM | 1 | 0.00%
  JJ.SUV.UTR+NEU.PLU.DEF.NOM | 187 | 0.01%
  JJ.SUV.UTR+NEU.PLU.IND.NOM | 28 | 0.00%
  JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM | 2228 | 0.08%
  JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM | 296 | 0.01%
  KN | 117948 | 4.07%
  KN.AN | 24 | 0.00%
  MAD | 131026 | 4.52%
  MID | 101646 | 3.51%
  NN.-.-.-.- | 206 | 0.01%
  NN.AN | 37351 | 1.29%
  NN.NEU.PLU.DEF.GEN | 864 | 0.03%
  NN.NEU.PLU.DEF.NOM | 12372 | 0.43%
  NN.NEU.PLU.IND.GEN | 1057 | 0.04%
  NN.NEU.PLU.IND.NOM | 43022 | 1.49%
  NN.NEU.SIN.DEF.GEN | 7186 | 0.25%
  NN.NEU.SIN.DEF.NOM | 59061 | 2.04%
  NN.NEU.SIN.IND.GEN | 699 | 0.02%
  NN.NEU.SIN.IND.NOM | 110212 | 3.80%
  NN.UTR.-.-.- | 199 | 0.01%
  NN.UTR.-.-.SMS | 4845 | 0.17%
  NN.UTR.PLU.DEF.GEN | 3430 | 0.12%
  NN.UTR.PLU.DEF.NOM | 25975 | 0.90%
  NN.UTR.PLU.IND.GEN | 3134 | 0.11%
  NN.UTR.PLU.IND.NOM | 101252 | 3.50%
  NN.UTR.SIN.DEF.GEN | 14776 | 0.51%
  NN.UTR.SIN.DEF.NOM | 123357 | 4.26%
  NN.UTR.SIN.IND.GEN | 2338 | 0.08%
  NN.UTR.SIN.IND.NOM | 185208 | 6.39%
  PAD | 93999 | 3.24%
  PC.PRF.MAS.SIN.DEF.GEN | 18 | 0.00%
  PC.PRF.MAS.SIN.DEF.NOM | 41 | 0.00%
  PC.PRF.NEU.SIN.IND.NOM | 5665 | 0.20%
  PC.PRF.UTR+NEU.PLU.IND+DEF.GEN | 12 | 0.00%
  PC.PRF.UTR+NEU.PLU.IND+DEF.NOM | 13568 | 0.47%
  PC.PRF.UTR+NEU.SIN.DEF.NOM | 2723 | 0.09%
  PC.PRF.UTR.SIN.IND.NOM | 9691 | 0.33%
  PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM | 15494 | 0.53%
  PL | 15486 | 0.53%
  PM.GEN | 3258 | 0.11%
  PM.NOM | 102747 | 3.55%
  PM.SMS | 10 | 0.00%
  PN.MAS.SIN.DEF.SUB+OBJ | 31 | 0.00%
  PN.NEU.SIN.DEF.SUB+OBJ | 45180 | 1.56%
  PN.NEU.SIN.IND.SUB+OBJ | 2581 | 0.09%
  PN.UTR+NEU.PLU.DEF.OBJ | 1393 | 0.05%
  PN.UTR+NEU.PLU.DEF.SUB | 3700 | 0.13%
  PN.UTR+NEU.PLU.DEF.SUB+OBJ | 558 | 0.02%
  PN.UTR+NEU.PLU.IND.SUB+OBJ | 2621 | 0.09%
  PN.UTR+NEU.SIN+PLU.DEF.OBJ | 11049 | 0.38%
  PN.UTR.PLU.DEF.OBJ | 1022 | 0.04%
  PN.UTR.PLU.DEF.SUB | 11788 | 0.41%
  PN.UTR.SIN.DEF.OBJ | 840 | 0.03%
  PN.UTR.SIN.DEF.SUB | 8164 | 0.28%
  PN.UTR.SIN.DEF.SUB+OBJ | 3143 | 0.11%
  PN.UTR.SIN.IND.SUB | 4040 | 0.14%
  PN.UTR.SIN.IND.SUB+OBJ | 1931 | 0.07%
  PP | 358838 | 12.39%
  PP.AN | 10 | 0.00%
  PS.NEU.SIN.DEF | 2345 | 0.08%
  PS.UTR+NEU.PLU.DEF | 1976 | 0.07%
  PS.UTR+NEU.SIN+PLU.DEF | 1418 | 0.05%
  PS.UTR.SIN.DEF | 3894 | 0.13%
  RG.NOM | 180310 | 6.22%
  RG.SMS | 11 | 0.00%
  RO.MAS.SIN.IND+DEF.NOM | 5 | 0.00%
  RO.NOM | 2892 | 0.10%
  SN | 53560 | 1.85%
  UO | 2274 | 0.08%
  VB.AN | 28 | 0.00%
  VB.IMP.AKT | 1765 | 0.06%
  VB.INF.AKT | 95313 | 3.29%
  VB.INF.SFO | 19930 | 0.69%
  VB.KON.PRS.AKT | 44 | 0.00%
  VB.KON.PRT.AKT | 118 | 0.00%
  VB.PRS.AKT | 184442 | 6.37%
  VB.PRS.SFO | 35885 | 1.24%
  VB.PRT.AKT | 19251 | 0.66%
  VB.PRT.SFO | 3293 | 0.11%
  VB.SUP.AKT | 14926 | 0.52%
  VB.SUP.SFO | 5290 | 0.18%
  
  '''
# ---
# name: test_write_pos_tags[en]
  '''
  ## POS Tags
  
  AB - DT - HA - HD - HP - HS - IE - IN - JJ - KN - MAD - MID - NN - PAD - PC - PL - PM - PN - PP - PS - RG - RO - SN - UO - VB
  
  ### POS Tags: **AB**
  There are 121224 (4%) `AB` tokens. Out of 25 observed tags, the rank of `AB` is: 7 in number of tokens.
  
  The 5 most frequent `AB` base forms: `inte`, `även`, `därmed`, `m.m.`, `delvis`
  
  The 5 most frequent `AB` tokens: `inte`, `även`, `Därmed`, `m.m.`, `delvis`
  
  
  #### Overview of features for POS tags
  ---
  ##### AB and Abbr
  
  121224 `AB` tokens (19% of all `AB` tokens) have a non-empty value of `Abbr`.
  
  `AB` tokens may have the following values of `Abbr`:
  - `Yes` (22438; 100% of non-empty `Abbr`)
  
  ##### AB and Degree
  
  121224 `AB` tokens (23% of all `AB` tokens) have a non-empty value of `Degree`.
  
  `AB` tokens may have the following values of `Degree`:
  - `Sup` (3890; 14% of non-empty `Degree`)
  
  - `Cmp` (8987; 32% of non-empty `Degree`)
  
  - `Pos` (15480; 55% of non-empty `Degree`)
  
  
  ### POS Tags: **DT**
  There are 101631 (4%) `DT` tokens. Out of 25 observed tags, the rank of `DT` is: 11 in number of tokens.
  
  The 5 most frequent `DT` base forms: `en`, `den`, `denna`, `någon`, `all`
  
  The 5 most frequent `DT` tokens: `en`, `ett`, `den`, `de`, `det`
  
  
  #### Overview of features for POS tags
  ---
  ##### DT and Definite
  
  101631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Definite`.
  
  `DT` tokens may have the following values of `Definite`:
  - `Def,Ind` (2654; 3% of non-empty `Definite`)
  
  - `Def` (41722; 41% of non-empty `Definite`)
  
  - `Ind` (57255; 56% of non-empty `Definite`)
  
  ##### DT and Gender
  
  101631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Gender`.
  
  `DT` tokens may have the following values of `Gender`:
  - `Masc` (1; 0% of non-empty `Gender`)
  
  - `Com,Neut` (19491; 19% of non-empty `Gender`)
  
  - `Neut` (29637; 29% of non-empty `Gender`)
  
  - `Com` (52502; 52% of non-empty `Gender`)
  
  ##### DT and Number
  
  101631 `DT` tokens (100% of all `DT` tokens) have a non-empty value of `Number`.
  
  `DT` tokens may have the following values of `Number`:
  - `Plur,Sing` (1170; 1% of non-empty `Number`)
  
  - `Plur` (17483; 17% of non-empty `Number`)
  
  - `Sing` (82978; 82% of non-empty `Number`)
  
  
  ### POS Tags: **HA**
  There are 13218 (0%) `HA` tokens. Out of 25 observed tags, the rank of `HA` is: 19 in number of tokens.
  
  The 5 most frequent `HA` base forms: `när`, `hur`, `där`, `som`, `då`
  
  The 5 most frequent `HA` tokens: `när`, `hur`, `där`, `När`, `som`
  
  
  #### Overview of features for POS tags
  ---
  HA not present among features
  
  ### POS Tags: **HD**
  There are 1407 (0%) `HD` tokens. Out of 25 observed tags, the rank of `HD` is: 23 in number of tokens.
  
  The 2 most frequent `HD` base forms: `i vilken mån:7`, `i vilken mån:3`
  
  The 5 most frequent `HD` tokens: `vilka`, `vilken`, `vilket`, `Vilka`, `Vilken`
  
  
  #### Overview of features for POS tags
  ---
  ##### HD and Definite
  
  1407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Definite`.
  
  `HD` tokens may have the following values of `Definite`:
  - `Ind` (1407; 100% of non-empty `Definite`)
  
  ##### HD and Gender
  
  1407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Gender`.
  
  `HD` tokens may have the following values of `Gender`:
  - `Neut` (164; 12% of non-empty `Gender`)
  
  - `Com` (420; 30% of non-empty `Gender`)
  
  - `Com,Neut` (823; 58% of non-empty `Gender`)
  
  ##### HD and Number
  
  1407 `HD` tokens (100% of all `HD` tokens) have a non-empty value of `Number`.
  
  `HD` tokens may have the following values of `Number`:
  - `Sing` (584; 42% of non-empty `Number`)
  
  - `Plur` (823; 58% of non-empty `Number`)
  
  
  ### POS Tags: **HP**
  There are 44722 (2%) `HP` tokens. Out of 25 observed tags, the rank of `HP` is: 17 in number of tokens.
  
  The 5 most frequent `HP` base forms: `vad`, `vad för`, `vem`, `vad än`, `såväl som:1`
  
  The 5 most frequent `HP` tokens: `som`, `vad`, `vilket`, `Vad`, `Som`
  
  
  #### Overview of features for POS tags
  ---
  ##### HP and Definite
  
  44722 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Definite`.
  
  `HP` tokens may have the following values of `Definite`:
  - `Ind` (4463; 100% of non-empty `Definite`)
  
  ##### HP and Gender
  
  44722 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Gender`.
  
  `HP` tokens may have the following values of `Gender`:
  - `Com,Neut` (205; 5% of non-empty `Gender`)
  
  - `Com` (262; 6% of non-empty `Gender`)
  
  - `Neut` (3996; 90% of non-empty `Gender`)
  
  ##### HP and Number
  
  44722 `HP` tokens (10% of all `HP` tokens) have a non-empty value of `Number`.
  
  `HP` tokens may have the following values of `Number`:
  - `Plur` (205; 5% of non-empty `Number`)
  
  - `Sing` (4258; 95% of non-empty `Number`)
  
  
  ### POS Tags: **HS**
  There are 186 (0%) `HS` tokens. Out of 25 observed tags, the rank of `HS` is: 25 in number of tokens.
  
  The 2 most frequent `HS` base forms: `vars`, `vem`
  
  The 3 most frequent `HS` tokens: `vars`, `vilkas`, `vems`
  
  
  #### Overview of features for POS tags
  ---
  ##### HS and Definite
  
  186 `HS` tokens (100% of all `HS` tokens) have a non-empty value of `Definite`.
  
  `HS` tokens may have the following values of `Definite`:
  - `Def` (186; 100% of non-empty `Definite`)
  
  
  ### POS Tags: **IE**
  There are 45393 (2%) `IE` tokens. Out of 25 observed tags, the rank of `IE` is: 16 in number of tokens.
  
  The 5 most frequent `IE` base forms: `att`, `ha att göra:2`, `ha att göra:12`, `ha att göra:26`, `ha att göra:15`
  
  The 5 most frequent `IE` tokens: `att`, `Att`, `geno`, `at`, `–`
  
  
  #### Overview of features for POS tags
  ---
  IE not present among features
  
  ### POS Tags: **IN**
  There are 840 (0%) `IN` tokens. Out of 25 observed tags, the rank of `IN` is: 24 in number of tokens.
  
  The 5 most frequent `IN` base forms: `nej`, `ja`, `jo`, `tack`, `nä`
  
  The 5 most frequent `IN` tokens: `nej`, `ja`, `Nej`, `Ja`, `Tack`
  
  
  #### Overview of features for POS tags
  ---
  IN not present among features
  
  ### POS Tags: **JJ**
  There are 132552 (5%) `JJ` tokens. Out of 25 observed tags, the rank of `JJ` is: 5 in number of tokens.
  
  The 5 most frequent `JJ` base forms: `ekonomisk`, `statlig`, `allmän`, `övrig`, `samtlig`
  
  The 5 most frequent `JJ` tokens: `ekonomiska`, `annan`, `allmänna`, `övriga`, `obligatorisk`
  
  
  #### Overview of features for POS tags
  ---
  ##### JJ and Abbr
  
  132552 `JJ` tokens (0% of all `JJ` tokens) have a non-empty value of `Abbr`.
  
  `JJ` tokens may have the following values of `Abbr`:
  - `Yes` (12; 100% of non-empty `Abbr`)
  
  ##### JJ and Case
  
  132552 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Case`.
  
  `JJ` tokens may have the following values of `Case`:
  - `Gen` (348; 0% of non-empty `Case`)
  
  - `Nom` (132190; 100% of non-empty `Case`)
  
  ##### JJ and Definite
  
  132552 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Definite`.
  
  `JJ` tokens may have the following values of `Definite`:
  - `Def` (19453; 15% of non-empty `Definite`)
  
  - `Ind` (54397; 41% of non-empty `Definite`)
  
  - `Def,Ind` (58679; 44% of non-empty `Definite`)
  
  ##### JJ and Degree
  
  132552 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Degree`.
  
  `JJ` tokens may have the following values of `Degree`:
  - `Sup` (2742; 2% of non-empty `Degree`)
  
  - `Cmp` (10868; 8% of non-empty `Degree`)
  
  - `Pos` (118931; 90% of non-empty `Degree`)
  
  ##### JJ and Gender
  
  132552 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Gender`.
  
  `JJ` tokens may have the following values of `Gender`:
  - `Masc` (378; 0% of non-empty `Gender`)
  
  - `Neut` (17920; 14% of non-empty `Gender`)
  
  - `Com` (31973; 24% of non-empty `Gender`)
  
  - `Com,Neut` (82269; 62% of non-empty `Gender`)
  
  ##### JJ and Number
  
  132552 `JJ` tokens (100% of all `JJ` tokens) have a non-empty value of `Number`.
  
  `JJ` tokens may have the following values of `Number`:
  - `Plur,Sing` (16702; 13% of non-empty `Number`)
  
  - `Plur` (48694; 37% of non-empty `Number`)
  
  - `Sing` (67140; 51% of non-empty `Number`)
  
  
  ### POS Tags: **KN**
  There are 117972 (4%) `KN` tokens. Out of 25 observed tags, the rank of `KN` is: 8 in number of tokens.
  
  The 5 most frequent `KN` base forms: `och`, `eller`, `samt`, `men`, `både och`
  
  The 5 most frequent `KN` tokens: `och`, `eller`, `som`, `samt`, `men`
  
  
  #### Overview of features for POS tags
  ---
  ##### KN and Abbr
  
  117972 `KN` tokens (0% of all `KN` tokens) have a non-empty value of `Abbr`.
  
  `KN` tokens may have the following values of `Abbr`:
  - `Yes` (17; 100% of non-empty `Abbr`)
  
  
  ### POS Tags: **MAD**
  There are 131026 (5%) `MAD` tokens. Out of 25 observed tags, the rank of `MAD` is: 6 in number of tokens.
  
  The 5 most frequent `MAD` tokens: `.`, `:`, `!`, `?`, `–`
  
  
  #### Overview of features for POS tags
  ---
  MAD not present among features
  
  ### POS Tags: **MID**
  There are 101646 (4%) `MID` tokens. Out of 25 observed tags, the rank of `MID` is: 10 in number of tokens.
  
  The 5 most frequent `MID` tokens: `,`, `/`, `:`, `-`, `–`
  
  
  #### Overview of features for POS tags
  ---
  MID not present among features
  
  ### POS Tags: **NN**
  There are 736544 (25%) `NN` tokens. Out of 25 observed tags, the rank of `NN` is: 1 in number of tokens.
  
  The 5 most frequent `NN` base forms: `riksdag`, `anslag`, `s`, `utgiftsområde`, `utbildning`
  
  The 5 most frequent `NN` tokens: `riksdagen`, `utgiftsområde`, `s`, `anslag`, `enlighet`
  
  
  #### Overview of features for POS tags
  ---
  ##### NN and Abbr
  
  736544 `NN` tokens (5% of all `NN` tokens) have a non-empty value of `Abbr`.
  
  `NN` tokens may have the following values of `Abbr`:
  - `Yes` (35393; 100% of non-empty `Abbr`)
  
  ##### NN and Case
  
  736544 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Case`.
  
  `NN` tokens may have the following values of `Case`:
  - `Gen` (33556; 5% of non-empty `Case`)
  
  - `Nom` (661878; 95% of non-empty `Case`)
  
  ##### NN and Compound
  
  736544 `NN` tokens (1% of all `NN` tokens) have a non-empty value of `Compound`.
  
  `NN` tokens may have the following values of `Compound`:
  - `Yes` (4826; 100% of non-empty `Compound`)
  
  ##### NN and Definite
  
  736544 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Definite`.
  
  `NN` tokens may have the following values of `Definite`:
  - `Def` (246895; 36% of non-empty `Definite`)
  
  - `Ind` (447518; 64% of non-empty `Definite`)
  
  ##### NN and Gender
  
  736544 `NN` tokens (95% of all `NN` tokens) have a non-empty value of `Gender`.
  
  `NN` tokens may have the following values of `Gender`:
  - `Neut` (234585; 34% of non-empty `Gender`)
  
  - `Com` (464205; 66% of non-empty `Gender`)
  
  ##### NN and Number
  
  736544 `NN` tokens (94% of all `NN` tokens) have a non-empty value of `Number`.
  
  `NN` tokens may have the following values of `Number`:
  - `Plur` (188599; 27% of non-empty `Number`)
  
  - `Sing` (506306; 73% of non-empty `Number`)
  
  
  ### POS Tags: **PAD**
  There are 93999 (3%) `PAD` tokens. Out of 25 observed tags, the rank of `PAD` is: 13 in number of tokens.
  
  The 5 most frequent `PAD` tokens: `)`, `(`, `"`, `]`, `[`
  
  
  #### Overview of features for POS tags
  ---
  PAD not present among features
  
  ### POS Tags: **PC**
  There are 47212 (2%) `PC` tokens. Out of 25 observed tags, the rank of `PC` is: 15 in number of tokens.
  
  The 5 most frequent `PC` base forms: `särskilja`, `särskild`, `stärka`, `behandla`, `föreslå`
  
  The 5 most frequent `PC` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Overview of features for POS tags
  ---
  ##### PC and Case
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Case`.
  
  `PC` tokens may have the following values of `Case`:
  - `Gen` (30; 0% of non-empty `Case`)
  
  - `Nom` (47182; 100% of non-empty `Case`)
  
  ##### PC and Definite
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Definite`.
  
  `PC` tokens may have the following values of `Definite`:
  - `Def` (2759; 6% of non-empty `Definite`)
  
  - `Ind` (15356; 33% of non-empty `Definite`)
  
  - `Def,Ind` (29097; 62% of non-empty `Definite`)
  
  ##### PC and Gender
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Gender`.
  
  `PC` tokens may have the following values of `Gender`:
  - `Masc` (62; 0% of non-empty `Gender`)
  
  - `Neut` (5647; 12% of non-empty `Gender`)
  
  - `Com` (9709; 21% of non-empty `Gender`)
  
  - `Com,Neut` (31794; 67% of non-empty `Gender`)
  
  ##### PC and Number
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Number`.
  
  `PC` tokens may have the following values of `Number`:
  - `Plur` (13587; 29% of non-empty `Number`)
  
  - `Plur,Sing` (15494; 33% of non-empty `Number`)
  
  - `Sing` (18131; 38% of non-empty `Number`)
  
  ##### PC and Tense
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `Tense`.
  
  `PC` tokens may have the following values of `Tense`:
  - `Pres` (15494; 33% of non-empty `Tense`)
  
  - `Past` (31718; 67% of non-empty `Tense`)
  
  ##### PC and VerbForm
  
  47212 `PC` tokens (100% of all `PC` tokens) have a non-empty value of `VerbForm`.
  
  `PC` tokens may have the following values of `VerbForm`:
  - `Part` (47212; 100% of non-empty `VerbForm`)
  
  
  ### POS Tags: **PL**
  There are 15486 (1%) `PL` tokens. Out of 25 observed tags, the rank of `PL` is: 18 in number of tokens.
  
  The 5 most frequent `PL` base forms: `fram`, `upp`, `ut`, `in`, `om`
  
  The 5 most frequent `PL` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Overview of features for POS tags
  ---
  PL not present among features
  
  ### POS Tags: **PM**
  There are 106015 (4%) `PM` tokens. Out of 25 observed tags, the rank of `PM` is: 9 in number of tokens.
  
  The 5 most frequent `PM` base forms: `Jonas`, `Fredrik`, `Stockholm`, `Roger`, `Ebba`
  
  The 5 most frequent `PM` tokens: `SD`, `KD`, `MP`, `Ebba`, `Erik`
  
  
  #### Overview of features for POS tags
  ---
  ##### PM and Case
  
  106015 `PM` tokens (100% of all `PM` tokens) have a non-empty value of `Case`.
  
  `PM` tokens may have the following values of `Case`:
  - `Gen` (3206; 3% of non-empty `Case`)
  
  - `Nom` (102800; 97% of non-empty `Case`)
  
  ##### PM and Compound
  
  106015 `PM` tokens (0% of all `PM` tokens) have a non-empty value of `Compound`.
  
  `PM` tokens may have the following values of `Compound`:
  - `Yes` (10; 100% of non-empty `Compound`)
  
  
  ### POS Tags: **PN**
  There are 98041 (3%) `PN` tokens. Out of 25 observed tags, the rank of `PN` is: 12 in number of tokens.
  
  The 5 most frequent `PN` base forms: `den`, `sig`, `denna`, `ställa sig:2`, `man`
  
  The 5 most frequent `PN` tokens: `det`, `sig`, `detta`, `Det`, `de`
  
  
  #### Overview of features for POS tags
  ---
  ##### PN and Case
  
  98041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Case`.
  
  `PN` tokens may have the following values of `Case`:
  - `Acc` (14305; 15% of non-empty `Case`)
  
  - `Nom` (27692; 28% of non-empty `Case`)
  
  - `Acc,Nom` (56044; 57% of non-empty `Case`)
  
  ##### PN and Definite
  
  98041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Definite`.
  
  `PN` tokens may have the following values of `Definite`:
  - `Ind` (11172; 11% of non-empty `Definite`)
  
  - `Def` (86869; 89% of non-empty `Definite`)
  
  ##### PN and Gender
  
  98041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Gender`.
  
  `PN` tokens may have the following values of `Gender`:
  - `Masc` (31; 0% of non-empty `Gender`)
  
  - `Com,Neut` (19321; 20% of non-empty `Gender`)
  
  - `Com` (30928; 32% of non-empty `Gender`)
  
  - `Neut` (47761; 49% of non-empty `Gender`)
  
  ##### PN and Number
  
  98041 `PN` tokens (100% of all `PN` tokens) have a non-empty value of `Number`.
  
  `PN` tokens may have the following values of `Number`:
  - `Plur,Sing` (11049; 11% of non-empty `Number`)
  
  - `Plur` (21168; 22% of non-empty `Number`)
  
  - `Sing` (65824; 67% of non-empty `Number`)
  
  
  ### POS Tags: **PP**
  There are 358848 (12%) `PP` tokens. Out of 25 observed tags, the rank of `PP` is: 3 in number of tokens.
  
  The 5 most frequent `PP` base forms: `i`, `för`, `av`, `till`, `om`
  
  The 5 most frequent `PP` tokens: `i`, `för`, `av`, `till`, `om`
  
  
  #### Overview of features for POS tags
  ---
  ##### PP and Abbr
  
  358848 `PP` tokens (0% of all `PP` tokens) have a non-empty value of `Abbr`.
  
  `PP` tokens may have the following values of `Abbr`:
  - `Yes` (5; 100% of non-empty `Abbr`)
  
  
  ### POS Tags: **PS**
  There are 9633 (0%) `PS` tokens. Out of 25 observed tags, the rank of `PS` is: 20 in number of tokens.
  
  The 5 most frequent `PS` base forms: `sig`, `vi`, `jag`, `de`, `den`
  
  The 5 most frequent `PS` tokens: `sin`, `sitt`, `sina`, `vår`, `vårt`
  
  
  #### Overview of features for POS tags
  ---
  ##### PS and Definite
  
  9633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Definite`.
  
  `PS` tokens may have the following values of `Definite`:
  - `Def` (9633; 100% of non-empty `Definite`)
  
  ##### PS and Gender
  
  9633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Gender`.
  
  `PS` tokens may have the following values of `Gender`:
  - `Neut` (2345; 24% of non-empty `Gender`)
  
  - `Com,Neut` (3393; 35% of non-empty `Gender`)
  
  - `Com` (3895; 40% of non-empty `Gender`)
  
  ##### PS and Number
  
  9633 `PS` tokens (100% of all `PS` tokens) have a non-empty value of `Number`.
  
  `PS` tokens may have the following values of `Number`:
  - `Plur,Sing` (1417; 15% of non-empty `Number`)
  
  - `Plur` (1976; 21% of non-empty `Number`)
  
  - `Sing` (6240; 65% of non-empty `Number`)
  
  
  ### POS Tags: **RG**
  There are 180321 (6%) `RG` tokens. Out of 25 observed tags, the rank of `RG` is: 4 in number of tokens.
  
  The 5 most frequent `RG` base forms: `V`, `två`, `tre`, `fyra`, `sex`
  
  The 5 most frequent `RG` tokens: `2018`, `2019`, `1`, `2`, `8`
  
  
  #### Overview of features for POS tags
  ---
  ##### RG and Case
  
  180321 `RG` tokens (100% of all `RG` tokens) have a non-empty value of `Case`.
  
  `RG` tokens may have the following values of `Case`:
  - `Nom` (180310; 100% of non-empty `Case`)
  
  ##### RG and Compound
  
  180321 `RG` tokens (0% of all `RG` tokens) have a non-empty value of `Compound`.
  
  `RG` tokens may have the following values of `Compound`:
  - `Yes` (11; 100% of non-empty `Compound`)
  
  
  ### POS Tags: **RO**
  There are 2897 (0%) `RO` tokens. Out of 25 observed tags, the rank of `RO` is: 21 in number of tokens.
  
  The 5 most frequent `RO` base forms: `fyra`, `första gången`, `i första hand:4`, `i första hand:8`, `i första hand:5`
  
  The 5 most frequent `RO` tokens: `första`, `1`, `andra`, `tredje`, `12`
  
  
  #### Overview of features for POS tags
  ---
  ##### RO and Case
  
  2897 `RO` tokens (100% of all `RO` tokens) have a non-empty value of `Case`.
  
  `RO` tokens may have the following values of `Case`:
  - `Nom` (2897; 100% of non-empty `Case`)
  
  ##### RO and Definite
  
  2897 `RO` tokens (0% of all `RO` tokens) have a non-empty value of `Definite`.
  
  `RO` tokens may have the following values of `Definite`:
  - `Def,Ind` (5; 100% of non-empty `Definite`)
  
  ##### RO and Gender
  
  2897 `RO` tokens (0% of all `RO` tokens) have a non-empty value of `Gender`.
  
  `RO` tokens may have the following values of `Gender`:
  - `Masc` (5; 100% of non-empty `Gender`)
  
  ##### RO and Number
  
  2897 `RO` tokens (0% of all `RO` tokens) have a non-empty value of `Number`.
  
  `RO` tokens may have the following values of `Number`:
  - `Sing` (5; 100% of non-empty `Number`)
  
  
  ### POS Tags: **SN**
  There are 53560 (2%) `SN` tokens. Out of 25 observed tags, the rank of `SN` is: 14 in number of tokens.
  
  The 5 most frequent `SN` base forms: `att`, `om`, `eftersom`, `innan`, `medan`
  
  The 5 most frequent `SN` tokens: `att`, `om`, `Om`, `eftersom`, `Att`
  
  
  #### Overview of features for POS tags
  ---
  SN not present among features
  
  ### POS Tags: **UO**
  There are 2274 (0%) `UO` tokens. Out of 25 observed tags, the rank of `UO` is: 22 in number of tokens.
  
  The 5 most frequent `UO` base forms: `public service`, `au pair`, `à la:16`, `à la`, `vice versa:27`
  
  The 5 most frequent `UO` tokens: `et`, `na`, `örslag`, `S`, `kolverk`
  
  
  #### Overview of features for POS tags
  ---
  UO not present among features
  
  ### POS Tags: **VB**
  There are 380285 (13%) `VB` tokens. Out of 25 observed tags, the rank of `VB` is: 2 in number of tokens.
  
  The 5 most frequent `VB` base forms: `vara`, `böra`, `föreslå`, `lägga`, `avstyrka`
  
  The 5 most frequent `VB` tokens: `är`, `bör`, `föreslår`, `avstyrker`, `anvisar`
  
  
  #### Overview of features for POS tags
  ---
  ##### VB and Abbr
  
  380285 `VB` tokens (0% of all `VB` tokens) have a non-empty value of `Abbr`.
  
  `VB` tokens may have the following values of `Abbr`:
  - `Yes` (18; 100% of non-empty `Abbr`)
  
  ##### VB and Mood
  
  380285 `VB` tokens (64% of all `VB` tokens) have a non-empty value of `Mood`.
  
  `VB` tokens may have the following values of `Mood`:
  - `Sub` (161; 0% of non-empty `Mood`)
  
  - `Imp` (1616; 1% of non-empty `Mood`)
  
  - `Ind` (242835; 99% of non-empty `Mood`)
  
  ##### VB and Tense
  
  380285 `VB` tokens (64% of all `VB` tokens) have a non-empty value of `Tense`.
  
  `VB` tokens may have the following values of `Tense`:
  - `Past` (22610; 9% of non-empty `Tense`)
  
  - `Pres` (220310; 91% of non-empty `Tense`)
  
  ##### VB and VerbForm
  
  380285 `VB` tokens (100% of all `VB` tokens) have a non-empty value of `VerbForm`.
  
  `VB` tokens may have the following values of `VerbForm`:
  - `Sup` (20211; 5% of non-empty `VerbForm`)
  
  - `Inf` (115019; 30% of non-empty `VerbForm`)
  
  - `Fin` (245031; 64% of non-empty `VerbForm`)
  
  ##### VB and Voice
  
  380285 `VB` tokens (100% of all `VB` tokens) have a non-empty value of `Voice`.
  
  `VB` tokens may have the following values of `Voice`:
  - `Pass` (64399; 17% of non-empty `Voice`)
  
  - `Act` (315858; 83% of non-empty `Voice`)
  
  
  '''
# ---
# name: test_write_pos_tags[sv]
  '''
  ## Ordklasser
  
  AB - DT - HA - HD - HP - HS - IE - IN - JJ - KN - MAD - MID - NN - PAD - PC - PL - PM - PN - PP - PS - RG - RO - SN - UO - VB
  
  ### Ordklass: **AB**
  Det finns 121224 (4%) `AB` tokens. Av 25 observerade ordklasser, `AB`:s rank är: 7 i antalet tokens.
  
  De 5 mest frekventa `AB` grundformer: `inte`, `även`, `därmed`, `m.m.`, `delvis`
  
  De 5 mest frekventa `AB` tokens: `inte`, `även`, `Därmed`, `m.m.`, `delvis`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### AB och Abbr
  
  121224 `AB` tokens (19% av alla `AB` tokens) har ett icke-tomt värde av `Abbr`.
  
  `AB` tokens har följande värden av `Abbr`:
  - `Yes` (22438; 100% av icke-tomma `Abbr`)
  
  ##### AB och Degree
  
  121224 `AB` tokens (23% av alla `AB` tokens) har ett icke-tomt värde av `Degree`.
  
  `AB` tokens har följande värden av `Degree`:
  - `Sup` (3890; 14% av icke-tomma `Degree`)
  
  - `Cmp` (8987; 32% av icke-tomma `Degree`)
  
  - `Pos` (15480; 55% av icke-tomma `Degree`)
  
  
  ### Ordklass: **DT**
  Det finns 101631 (4%) `DT` tokens. Av 25 observerade ordklasser, `DT`:s rank är: 11 i antalet tokens.
  
  De 5 mest frekventa `DT` grundformer: `en`, `den`, `denna`, `någon`, `all`
  
  De 5 mest frekventa `DT` tokens: `en`, `ett`, `den`, `de`, `det`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### DT och Definite
  
  101631 `DT` tokens (100% av alla `DT` tokens) har ett icke-tomt värde av `Definite`.
  
  `DT` tokens har följande värden av `Definite`:
  - `Def,Ind` (2654; 3% av icke-tomma `Definite`)
  
  - `Def` (41722; 41% av icke-tomma `Definite`)
  
  - `Ind` (57255; 56% av icke-tomma `Definite`)
  
  ##### DT och Gender
  
  101631 `DT` tokens (100% av alla `DT` tokens) har ett icke-tomt värde av `Gender`.
  
  `DT` tokens har följande värden av `Gender`:
  - `Masc` (1; 0% av icke-tomma `Gender`)
  
  - `Com,Neut` (19491; 19% av icke-tomma `Gender`)
  
  - `Neut` (29637; 29% av icke-tomma `Gender`)
  
  - `Com` (52502; 52% av icke-tomma `Gender`)
  
  ##### DT och Number
  
  101631 `DT` tokens (100% av alla `DT` tokens) har ett icke-tomt värde av `Number`.
  
  `DT` tokens har följande värden av `Number`:
  - `Plur,Sing` (1170; 1% av icke-tomma `Number`)
  
  - `Plur` (17483; 17% av icke-tomma `Number`)
  
  - `Sing` (82978; 82% av icke-tomma `Number`)
  
  
  ### Ordklass: **HA**
  Det finns 13218 (0%) `HA` tokens. Av 25 observerade ordklasser, `HA`:s rank är: 19 i antalet tokens.
  
  De 5 mest frekventa `HA` grundformer: `när`, `hur`, `där`, `som`, `då`
  
  De 5 mest frekventa `HA` tokens: `när`, `hur`, `där`, `När`, `som`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  HA not present among features
  
  ### Ordklass: **HD**
  Det finns 1407 (0%) `HD` tokens. Av 25 observerade ordklasser, `HD`:s rank är: 23 i antalet tokens.
  
  De 2 mest frekventa `HD` grundformer: `i vilken mån:7`, `i vilken mån:3`
  
  De 5 mest frekventa `HD` tokens: `vilka`, `vilken`, `vilket`, `Vilka`, `Vilken`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### HD och Definite
  
  1407 `HD` tokens (100% av alla `HD` tokens) har ett icke-tomt värde av `Definite`.
  
  `HD` tokens har följande värden av `Definite`:
  - `Ind` (1407; 100% av icke-tomma `Definite`)
  
  ##### HD och Gender
  
  1407 `HD` tokens (100% av alla `HD` tokens) har ett icke-tomt värde av `Gender`.
  
  `HD` tokens har följande värden av `Gender`:
  - `Neut` (164; 12% av icke-tomma `Gender`)
  
  - `Com` (420; 30% av icke-tomma `Gender`)
  
  - `Com,Neut` (823; 58% av icke-tomma `Gender`)
  
  ##### HD och Number
  
  1407 `HD` tokens (100% av alla `HD` tokens) har ett icke-tomt värde av `Number`.
  
  `HD` tokens har följande värden av `Number`:
  - `Sing` (584; 42% av icke-tomma `Number`)
  
  - `Plur` (823; 58% av icke-tomma `Number`)
  
  
  ### Ordklass: **HP**
  Det finns 44722 (2%) `HP` tokens. Av 25 observerade ordklasser, `HP`:s rank är: 17 i antalet tokens.
  
  De 5 mest frekventa `HP` grundformer: `vad`, `vad för`, `vem`, `vad än`, `såväl som:1`
  
  De 5 mest frekventa `HP` tokens: `som`, `vad`, `vilket`, `Vad`, `Som`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### HP och Definite
  
  44722 `HP` tokens (10% av alla `HP` tokens) har ett icke-tomt värde av `Definite`.
  
  `HP` tokens har följande värden av `Definite`:
  - `Ind` (4463; 100% av icke-tomma `Definite`)
  
  ##### HP och Gender
  
  44722 `HP` tokens (10% av alla `HP` tokens) har ett icke-tomt värde av `Gender`.
  
  `HP` tokens har följande värden av `Gender`:
  - `Com,Neut` (205; 5% av icke-tomma `Gender`)
  
  - `Com` (262; 6% av icke-tomma `Gender`)
  
  - `Neut` (3996; 90% av icke-tomma `Gender`)
  
  ##### HP och Number
  
  44722 `HP` tokens (10% av alla `HP` tokens) har ett icke-tomt värde av `Number`.
  
  `HP` tokens har följande värden av `Number`:
  - `Plur` (205; 5% av icke-tomma `Number`)
  
  - `Sing` (4258; 95% av icke-tomma `Number`)
  
  
  ### Ordklass: **HS**
  Det finns 186 (0%) `HS` tokens. Av 25 observerade ordklasser, `HS`:s rank är: 25 i antalet tokens.
  
  De 2 mest frekventa `HS` grundformer: `vars`, `vem`
  
  De 3 mest frekventa `HS` tokens: `vars`, `vilkas`, `vems`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### HS och Definite
  
  186 `HS` tokens (100% av alla `HS` tokens) har ett icke-tomt värde av `Definite`.
  
  `HS` tokens har följande värden av `Definite`:
  - `Def` (186; 100% av icke-tomma `Definite`)
  
  
  ### Ordklass: **IE**
  Det finns 45393 (2%) `IE` tokens. Av 25 observerade ordklasser, `IE`:s rank är: 16 i antalet tokens.
  
  De 5 mest frekventa `IE` grundformer: `att`, `ha att göra:2`, `ha att göra:12`, `ha att göra:26`, `ha att göra:15`
  
  De 5 mest frekventa `IE` tokens: `att`, `Att`, `geno`, `at`, `–`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  IE not present among features
  
  ### Ordklass: **IN**
  Det finns 840 (0%) `IN` tokens. Av 25 observerade ordklasser, `IN`:s rank är: 24 i antalet tokens.
  
  De 5 mest frekventa `IN` grundformer: `nej`, `ja`, `jo`, `tack`, `nä`
  
  De 5 mest frekventa `IN` tokens: `nej`, `ja`, `Nej`, `Ja`, `Tack`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  IN not present among features
  
  ### Ordklass: **JJ**
  Det finns 132552 (5%) `JJ` tokens. Av 25 observerade ordklasser, `JJ`:s rank är: 5 i antalet tokens.
  
  De 5 mest frekventa `JJ` grundformer: `ekonomisk`, `statlig`, `allmän`, `övrig`, `samtlig`
  
  De 5 mest frekventa `JJ` tokens: `ekonomiska`, `annan`, `allmänna`, `övriga`, `obligatorisk`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### JJ och Abbr
  
  132552 `JJ` tokens (0% av alla `JJ` tokens) har ett icke-tomt värde av `Abbr`.
  
  `JJ` tokens har följande värden av `Abbr`:
  - `Yes` (12; 100% av icke-tomma `Abbr`)
  
  ##### JJ och Case
  
  132552 `JJ` tokens (100% av alla `JJ` tokens) har ett icke-tomt värde av `Case`.
  
  `JJ` tokens har följande värden av `Case`:
  - `Gen` (348; 0% av icke-tomma `Case`)
  
  - `Nom` (132190; 100% av icke-tomma `Case`)
  
  ##### JJ och Definite
  
  132552 `JJ` tokens (100% av alla `JJ` tokens) har ett icke-tomt värde av `Definite`.
  
  `JJ` tokens har följande värden av `Definite`:
  - `Def` (19453; 15% av icke-tomma `Definite`)
  
  - `Ind` (54397; 41% av icke-tomma `Definite`)
  
  - `Def,Ind` (58679; 44% av icke-tomma `Definite`)
  
  ##### JJ och Degree
  
  132552 `JJ` tokens (100% av alla `JJ` tokens) har ett icke-tomt värde av `Degree`.
  
  `JJ` tokens har följande värden av `Degree`:
  - `Sup` (2742; 2% av icke-tomma `Degree`)
  
  - `Cmp` (10868; 8% av icke-tomma `Degree`)
  
  - `Pos` (118931; 90% av icke-tomma `Degree`)
  
  ##### JJ och Gender
  
  132552 `JJ` tokens (100% av alla `JJ` tokens) har ett icke-tomt värde av `Gender`.
  
  `JJ` tokens har följande värden av `Gender`:
  - `Masc` (378; 0% av icke-tomma `Gender`)
  
  - `Neut` (17920; 14% av icke-tomma `Gender`)
  
  - `Com` (31973; 24% av icke-tomma `Gender`)
  
  - `Com,Neut` (82269; 62% av icke-tomma `Gender`)
  
  ##### JJ och Number
  
  132552 `JJ` tokens (100% av alla `JJ` tokens) har ett icke-tomt värde av `Number`.
  
  `JJ` tokens har följande värden av `Number`:
  - `Plur,Sing` (16702; 13% av icke-tomma `Number`)
  
  - `Plur` (48694; 37% av icke-tomma `Number`)
  
  - `Sing` (67140; 51% av icke-tomma `Number`)
  
  
  ### Ordklass: **KN**
  Det finns 117972 (4%) `KN` tokens. Av 25 observerade ordklasser, `KN`:s rank är: 8 i antalet tokens.
  
  De 5 mest frekventa `KN` grundformer: `och`, `eller`, `samt`, `men`, `både och`
  
  De 5 mest frekventa `KN` tokens: `och`, `eller`, `som`, `samt`, `men`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### KN och Abbr
  
  117972 `KN` tokens (0% av alla `KN` tokens) har ett icke-tomt värde av `Abbr`.
  
  `KN` tokens har följande värden av `Abbr`:
  - `Yes` (17; 100% av icke-tomma `Abbr`)
  
  
  ### Ordklass: **MAD**
  Det finns 131026 (5%) `MAD` tokens. Av 25 observerade ordklasser, `MAD`:s rank är: 6 i antalet tokens.
  
  De 5 mest frekventa `MAD` tokens: `.`, `:`, `!`, `?`, `–`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  MAD not present among features
  
  ### Ordklass: **MID**
  Det finns 101646 (4%) `MID` tokens. Av 25 observerade ordklasser, `MID`:s rank är: 10 i antalet tokens.
  
  De 5 mest frekventa `MID` tokens: `,`, `/`, `:`, `-`, `–`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  MID not present among features
  
  ### Ordklass: **NN**
  Det finns 736544 (25%) `NN` tokens. Av 25 observerade ordklasser, `NN`:s rank är: 1 i antalet tokens.
  
  De 5 mest frekventa `NN` grundformer: `riksdag`, `anslag`, `s`, `utgiftsområde`, `utbildning`
  
  De 5 mest frekventa `NN` tokens: `riksdagen`, `utgiftsområde`, `s`, `anslag`, `enlighet`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### NN och Abbr
  
  736544 `NN` tokens (5% av alla `NN` tokens) har ett icke-tomt värde av `Abbr`.
  
  `NN` tokens har följande värden av `Abbr`:
  - `Yes` (35393; 100% av icke-tomma `Abbr`)
  
  ##### NN och Case
  
  736544 `NN` tokens (94% av alla `NN` tokens) har ett icke-tomt värde av `Case`.
  
  `NN` tokens har följande värden av `Case`:
  - `Gen` (33556; 5% av icke-tomma `Case`)
  
  - `Nom` (661878; 95% av icke-tomma `Case`)
  
  ##### NN och Compound
  
  736544 `NN` tokens (1% av alla `NN` tokens) har ett icke-tomt värde av `Compound`.
  
  `NN` tokens har följande värden av `Compound`:
  - `Yes` (4826; 100% av icke-tomma `Compound`)
  
  ##### NN och Definite
  
  736544 `NN` tokens (94% av alla `NN` tokens) har ett icke-tomt värde av `Definite`.
  
  `NN` tokens har följande värden av `Definite`:
  - `Def` (246895; 36% av icke-tomma `Definite`)
  
  - `Ind` (447518; 64% av icke-tomma `Definite`)
  
  ##### NN och Gender
  
  736544 `NN` tokens (95% av alla `NN` tokens) har ett icke-tomt värde av `Gender`.
  
  `NN` tokens har följande värden av `Gender`:
  - `Neut` (234585; 34% av icke-tomma `Gender`)
  
  - `Com` (464205; 66% av icke-tomma `Gender`)
  
  ##### NN och Number
  
  736544 `NN` tokens (94% av alla `NN` tokens) har ett icke-tomt värde av `Number`.
  
  `NN` tokens har följande värden av `Number`:
  - `Plur` (188599; 27% av icke-tomma `Number`)
  
  - `Sing` (506306; 73% av icke-tomma `Number`)
  
  
  ### Ordklass: **PAD**
  Det finns 93999 (3%) `PAD` tokens. Av 25 observerade ordklasser, `PAD`:s rank är: 13 i antalet tokens.
  
  De 5 mest frekventa `PAD` tokens: `)`, `(`, `"`, `]`, `[`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  PAD not present among features
  
  ### Ordklass: **PC**
  Det finns 47212 (2%) `PC` tokens. Av 25 observerade ordklasser, `PC`:s rank är: 15 i antalet tokens.
  
  De 5 mest frekventa `PC` grundformer: `särskilja`, `särskild`, `stärka`, `behandla`, `föreslå`
  
  De 5 mest frekventa `PC` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### PC och Case
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `Case`.
  
  `PC` tokens har följande värden av `Case`:
  - `Gen` (30; 0% av icke-tomma `Case`)
  
  - `Nom` (47182; 100% av icke-tomma `Case`)
  
  ##### PC och Definite
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `Definite`.
  
  `PC` tokens har följande värden av `Definite`:
  - `Def` (2759; 6% av icke-tomma `Definite`)
  
  - `Ind` (15356; 33% av icke-tomma `Definite`)
  
  - `Def,Ind` (29097; 62% av icke-tomma `Definite`)
  
  ##### PC och Gender
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `Gender`.
  
  `PC` tokens har följande värden av `Gender`:
  - `Masc` (62; 0% av icke-tomma `Gender`)
  
  - `Neut` (5647; 12% av icke-tomma `Gender`)
  
  - `Com` (9709; 21% av icke-tomma `Gender`)
  
  - `Com,Neut` (31794; 67% av icke-tomma `Gender`)
  
  ##### PC och Number
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `Number`.
  
  `PC` tokens har följande värden av `Number`:
  - `Plur` (13587; 29% av icke-tomma `Number`)
  
  - `Plur,Sing` (15494; 33% av icke-tomma `Number`)
  
  - `Sing` (18131; 38% av icke-tomma `Number`)
  
  ##### PC och Tense
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `Tense`.
  
  `PC` tokens har följande värden av `Tense`:
  - `Pres` (15494; 33% av icke-tomma `Tense`)
  
  - `Past` (31718; 67% av icke-tomma `Tense`)
  
  ##### PC och VerbForm
  
  47212 `PC` tokens (100% av alla `PC` tokens) har ett icke-tomt värde av `VerbForm`.
  
  `PC` tokens har följande värden av `VerbForm`:
  - `Part` (47212; 100% av icke-tomma `VerbForm`)
  
  
  ### Ordklass: **PL**
  Det finns 15486 (1%) `PL` tokens. Av 25 observerade ordklasser, `PL`:s rank är: 18 i antalet tokens.
  
  De 5 mest frekventa `PL` grundformer: `fram`, `upp`, `ut`, `in`, `om`
  
  De 5 mest frekventa `PL` tokens: `följande`, `särskilda`, `särskild`, `stärkt`, `Särskilda`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  PL not present among features
  
  ### Ordklass: **PM**
  Det finns 106015 (4%) `PM` tokens. Av 25 observerade ordklasser, `PM`:s rank är: 9 i antalet tokens.
  
  De 5 mest frekventa `PM` grundformer: `Jonas`, `Fredrik`, `Stockholm`, `Roger`, `Ebba`
  
  De 5 mest frekventa `PM` tokens: `SD`, `KD`, `MP`, `Ebba`, `Erik`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### PM och Case
  
  106015 `PM` tokens (100% av alla `PM` tokens) har ett icke-tomt värde av `Case`.
  
  `PM` tokens har följande värden av `Case`:
  - `Gen` (3206; 3% av icke-tomma `Case`)
  
  - `Nom` (102800; 97% av icke-tomma `Case`)
  
  ##### PM och Compound
  
  106015 `PM` tokens (0% av alla `PM` tokens) har ett icke-tomt värde av `Compound`.
  
  `PM` tokens har följande värden av `Compound`:
  - `Yes` (10; 100% av icke-tomma `Compound`)
  
  
  ### Ordklass: **PN**
  Det finns 98041 (3%) `PN` tokens. Av 25 observerade ordklasser, `PN`:s rank är: 12 i antalet tokens.
  
  De 5 mest frekventa `PN` grundformer: `den`, `sig`, `denna`, `ställa sig:2`, `man`
  
  De 5 mest frekventa `PN` tokens: `det`, `sig`, `detta`, `Det`, `de`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### PN och Case
  
  98041 `PN` tokens (100% av alla `PN` tokens) har ett icke-tomt värde av `Case`.
  
  `PN` tokens har följande värden av `Case`:
  - `Acc` (14305; 15% av icke-tomma `Case`)
  
  - `Nom` (27692; 28% av icke-tomma `Case`)
  
  - `Acc,Nom` (56044; 57% av icke-tomma `Case`)
  
  ##### PN och Definite
  
  98041 `PN` tokens (100% av alla `PN` tokens) har ett icke-tomt värde av `Definite`.
  
  `PN` tokens har följande värden av `Definite`:
  - `Ind` (11172; 11% av icke-tomma `Definite`)
  
  - `Def` (86869; 89% av icke-tomma `Definite`)
  
  ##### PN och Gender
  
  98041 `PN` tokens (100% av alla `PN` tokens) har ett icke-tomt värde av `Gender`.
  
  `PN` tokens har följande värden av `Gender`:
  - `Masc` (31; 0% av icke-tomma `Gender`)
  
  - `Com,Neut` (19321; 20% av icke-tomma `Gender`)
  
  - `Com` (30928; 32% av icke-tomma `Gender`)
  
  - `Neut` (47761; 49% av icke-tomma `Gender`)
  
  ##### PN och Number
  
  98041 `PN` tokens (100% av alla `PN` tokens) har ett icke-tomt värde av `Number`.
  
  `PN` tokens har följande värden av `Number`:
  - `Plur,Sing` (11049; 11% av icke-tomma `Number`)
  
  - `Plur` (21168; 22% av icke-tomma `Number`)
  
  - `Sing` (65824; 67% av icke-tomma `Number`)
  
  
  ### Ordklass: **PP**
  Det finns 358848 (12%) `PP` tokens. Av 25 observerade ordklasser, `PP`:s rank är: 3 i antalet tokens.
  
  De 5 mest frekventa `PP` grundformer: `i`, `för`, `av`, `till`, `om`
  
  De 5 mest frekventa `PP` tokens: `i`, `för`, `av`, `till`, `om`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### PP och Abbr
  
  358848 `PP` tokens (0% av alla `PP` tokens) har ett icke-tomt värde av `Abbr`.
  
  `PP` tokens har följande värden av `Abbr`:
  - `Yes` (5; 100% av icke-tomma `Abbr`)
  
  
  ### Ordklass: **PS**
  Det finns 9633 (0%) `PS` tokens. Av 25 observerade ordklasser, `PS`:s rank är: 20 i antalet tokens.
  
  De 5 mest frekventa `PS` grundformer: `sig`, `vi`, `jag`, `de`, `den`
  
  De 5 mest frekventa `PS` tokens: `sin`, `sitt`, `sina`, `vår`, `vårt`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### PS och Definite
  
  9633 `PS` tokens (100% av alla `PS` tokens) har ett icke-tomt värde av `Definite`.
  
  `PS` tokens har följande värden av `Definite`:
  - `Def` (9633; 100% av icke-tomma `Definite`)
  
  ##### PS och Gender
  
  9633 `PS` tokens (100% av alla `PS` tokens) har ett icke-tomt värde av `Gender`.
  
  `PS` tokens har följande värden av `Gender`:
  - `Neut` (2345; 24% av icke-tomma `Gender`)
  
  - `Com,Neut` (3393; 35% av icke-tomma `Gender`)
  
  - `Com` (3895; 40% av icke-tomma `Gender`)
  
  ##### PS och Number
  
  9633 `PS` tokens (100% av alla `PS` tokens) har ett icke-tomt värde av `Number`.
  
  `PS` tokens har följande värden av `Number`:
  - `Plur,Sing` (1417; 15% av icke-tomma `Number`)
  
  - `Plur` (1976; 21% av icke-tomma `Number`)
  
  - `Sing` (6240; 65% av icke-tomma `Number`)
  
  
  ### Ordklass: **RG**
  Det finns 180321 (6%) `RG` tokens. Av 25 observerade ordklasser, `RG`:s rank är: 4 i antalet tokens.
  
  De 5 mest frekventa `RG` grundformer: `V`, `två`, `tre`, `fyra`, `sex`
  
  De 5 mest frekventa `RG` tokens: `2018`, `2019`, `1`, `2`, `8`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### RG och Case
  
  180321 `RG` tokens (100% av alla `RG` tokens) har ett icke-tomt värde av `Case`.
  
  `RG` tokens har följande värden av `Case`:
  - `Nom` (180310; 100% av icke-tomma `Case`)
  
  ##### RG och Compound
  
  180321 `RG` tokens (0% av alla `RG` tokens) har ett icke-tomt värde av `Compound`.
  
  `RG` tokens har följande värden av `Compound`:
  - `Yes` (11; 100% av icke-tomma `Compound`)
  
  
  ### Ordklass: **RO**
  Det finns 2897 (0%) `RO` tokens. Av 25 observerade ordklasser, `RO`:s rank är: 21 i antalet tokens.
  
  De 5 mest frekventa `RO` grundformer: `fyra`, `första gången`, `i första hand:4`, `i första hand:8`, `i första hand:5`
  
  De 5 mest frekventa `RO` tokens: `första`, `1`, `andra`, `tredje`, `12`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### RO och Case
  
  2897 `RO` tokens (100% av alla `RO` tokens) har ett icke-tomt värde av `Case`.
  
  `RO` tokens har följande värden av `Case`:
  - `Nom` (2897; 100% av icke-tomma `Case`)
  
  ##### RO och Definite
  
  2897 `RO` tokens (0% av alla `RO` tokens) har ett icke-tomt värde av `Definite`.
  
  `RO` tokens har följande värden av `Definite`:
  - `Def,Ind` (5; 100% av icke-tomma `Definite`)
  
  ##### RO och Gender
  
  2897 `RO` tokens (0% av alla `RO` tokens) har ett icke-tomt värde av `Gender`.
  
  `RO` tokens har följande värden av `Gender`:
  - `Masc` (5; 100% av icke-tomma `Gender`)
  
  ##### RO och Number
  
  2897 `RO` tokens (0% av alla `RO` tokens) har ett icke-tomt värde av `Number`.
  
  `RO` tokens har följande värden av `Number`:
  - `Sing` (5; 100% av icke-tomma `Number`)
  
  
  ### Ordklass: **SN**
  Det finns 53560 (2%) `SN` tokens. Av 25 observerade ordklasser, `SN`:s rank är: 14 i antalet tokens.
  
  De 5 mest frekventa `SN` grundformer: `att`, `om`, `eftersom`, `innan`, `medan`
  
  De 5 mest frekventa `SN` tokens: `att`, `om`, `Om`, `eftersom`, `Att`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  SN not present among features
  
  ### Ordklass: **UO**
  Det finns 2274 (0%) `UO` tokens. Av 25 observerade ordklasser, `UO`:s rank är: 22 i antalet tokens.
  
  De 5 mest frekventa `UO` grundformer: `public service`, `au pair`, `à la:16`, `à la`, `vice versa:27`
  
  De 5 mest frekventa `UO` tokens: `et`, `na`, `örslag`, `S`, `kolverk`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  UO not present among features
  
  ### Ordklass: **VB**
  Det finns 380285 (13%) `VB` tokens. Av 25 observerade ordklasser, `VB`:s rank är: 2 i antalet tokens.
  
  De 5 mest frekventa `VB` grundformer: `vara`, `böra`, `föreslå`, `lägga`, `avstyrka`
  
  De 5 mest frekventa `VB` tokens: `är`, `bör`, `föreslår`, `avstyrker`, `anvisar`
  
  
  #### Översikt av särdrag hos ordklasser
  ---
  ##### VB och Abbr
  
  380285 `VB` tokens (0% av alla `VB` tokens) har ett icke-tomt värde av `Abbr`.
  
  `VB` tokens har följande värden av `Abbr`:
  - `Yes` (18; 100% av icke-tomma `Abbr`)
  
  ##### VB och Mood
  
  380285 `VB` tokens (64% av alla `VB` tokens) har ett icke-tomt värde av `Mood`.
  
  `VB` tokens har följande värden av `Mood`:
  - `Sub` (161; 0% av icke-tomma `Mood`)
  
  - `Imp` (1616; 1% av icke-tomma `Mood`)
  
  - `Ind` (242835; 99% av icke-tomma `Mood`)
  
  ##### VB och Tense
  
  380285 `VB` tokens (64% av alla `VB` tokens) har ett icke-tomt värde av `Tense`.
  
  `VB` tokens har följande värden av `Tense`:
  - `Past` (22610; 9% av icke-tomma `Tense`)
  
  - `Pres` (220310; 91% av icke-tomma `Tense`)
  
  ##### VB och VerbForm
  
  380285 `VB` tokens (100% av alla `VB` tokens) har ett icke-tomt värde av `VerbForm`.
  
  `VB` tokens har följande värden av `VerbForm`:
  - `Sup` (20211; 5% av icke-tomma `VerbForm`)
  
  - `Inf` (115019; 30% av icke-tomma `VerbForm`)
  
  - `Fin` (245031; 64% av icke-tomma `VerbForm`)
  
  ##### VB och Voice
  
  380285 `VB` tokens (100% av alla `VB` tokens) har ett icke-tomt värde av `Voice`.
  
  `VB` tokens har följande värden av `Voice`:
  - `Pass` (64399; 17% av icke-tomma `Voice`)
  
  - `Act` (315858; 83% av icke-tomma `Voice`)
  
  
  '''
# ---
# name: test_write_readability[en]
  '''
  ## Readability
  
  This corpus has the following readability scores:
  - mean value for **lix** is 56.52 and standard deviation is 28.40
  - mean value for **ovix** is 59.19 and standard deviation is 25.17
  - mean value for **nk** is 2.18 and standard deviation is 1.71
  
  '''
# ---
# name: test_write_readability[sv]
  '''
  ## Läsbarhet
  
  Denna korpus har följande läsbarhetsindex:
  - medelvärdet för **lix** är 56.52 och standardavikelsen är 28.40
  - medelvärdet för **ovix** är 59.19 och standardavikelsen är 25.17
  - medelvärdet för **nk** är 2.18 och standardavikelsen är 1.71
  
  '''
# ---
# name: test_write_statistical_overview[en]
  '''
  ## Overview
  
  Feature | Number | Mean | Standard deviation
  --- | --- | --- | ---
  number of files (`file`) | 2 | | 
  file length, in characters (`file`) | 17940923 | 8970461.500 | 254556.320
  number of texts (`text`) | 4063 | | 
  text length, in characters (`text`) | 17928556 | 4412.640 | 31685.142
  number of documents (`dokument`) | 87 | | 
  document length, in characters (`dokument`) | 17940832 | 206216.460 | 148654.042
  number of paragraphs (`segment.paragraph`) | 115542 | | 
  paragraph length, in characters (`segment.paragraph`) | 17309621 | 149.812 | 240.162
  number of sentences (`segment.sentence`) | 194785 | | 
  sentence length, in characters (`segment.sentence`) | 17228487 | 88.449 | 81.484
  sentence length, in words (`segment.sentence`) | 2558418 | 13.135 | 12.046
  number of tokens (`segment.token`) | 2896932 | | 
  token length, in characters (`segment.token`) | 14864325 | 5.131 | 3.986
  READABILITY | --- | --- | ---
  LIX value (`text:readability.lix`) | - | 56.522 | 28.404
  OVIX value (`text:readability.ovix`) | - | 59.195 | 25.167
  NK value (`text:readability.nk`) | - | 2.183 | 1.712
  
  '''
# ---
# name: test_write_statistical_overview[sv]
  '''
  ## Översikt
  
  Egenskap | Värde | Medelvärde | Standardavvikelse
  --- | --- | --- | ---
  antal filer (`file`) | 2 | | 
  fillängd, i tecken (`file`) | 17940923 | 8970461.500 | 254556.320
  antal texter (`text`) | 4063 | | 
  textlängd, i tecken (`text`) | 17928556 | 4412.640 | 31685.142
  antal dokument (`dokument`) | 87 | | 
  dokumentlängd, i tecken (`dokument`) | 17940832 | 206216.460 | 148654.042
  antal stycken (`segment.paragraph`) | 115542 | | 
  styckeslängd, i tecken (`segment.paragraph`) | 17309621 | 149.812 | 240.162
  antal meningar (`segment.sentence`) | 194785 | | 
  meningslängd, i tecken (`segment.sentence`) | 17228487 | 88.449 | 81.484
  meningslängd, i ord (`segment.sentence`) | 2558418 | 13.135 | 12.046
  antal tokens (`segment.token`) | 2896932 | | 
  tokenlängd, i tecken (`segment.token`) | 14864325 | 5.131 | 3.986
  LÄSBARHET | --- | --- | ---
  LIX värde (`text:readability.lix`) | - | 56.522 | 28.404
  OVIX värde (`text:readability.ovix`) | - | 59.195 | 25.167
  NK värde (`text:readability.nk`) | - | 2.183 | 1.712
  
  '''
# ---
# name: test_write_tokenization_and_word_segmentation[en]
  '''
  ## Tokenization and Word Segmentation
  - This corpus is built from 4063 texts, over 87 documents, in 2 files.
  - This corpus contains 115542 paragraphs in 87 documents.
  - This corpus contains 194785 sentences and 2896932 tokens.
  
  '''
# ---
# name: test_write_tokenization_and_word_segmentation[sv]
  '''
  ## Tokenisering och segmentering
  - Denna korpus är skapad från 4063 texter, i 87 dokument, som finns i 2 filer.
  - Denna korpus innehåller 115542 stycken i 87 dokument.
  - Denna korpus innehåller 194785 meningar och 2896932 tokens.
  
  '''
# ---
# name: test_write_top_10_lemmas[en]
  '''
  ## Top 10 base forms
  
  1. utbildningsutskott
  2. utbildningsutskottet
  3. s
  4. betänkande
  5. utgiftsområde
  6. utbildning
  7. och
  8. universitetsforskning
  9. sammanfattning
  10. U
  
  '''
# ---
# name: test_write_top_10_lemmas[sv]
  '''
  ## Topp-10 grundformer
  
  1. utbildningsutskott
  2. utbildningsutskottet
  3. s
  4. betänkande
  5. utgiftsområde
  6. utbildning
  7. och
  8. universitetsforskning
  9. sammanfattning
  10. U
  
  '''
# ---
